--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "csscomb": "3.0.4",
     "grunt": "0.4.5",
     "grunt-bg-shell": "2.3.1",
-    "grunt-cli": "0.1.13",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-compress": "0.13.0",
     "grunt-contrib-copy": "0.8.0",
